# GrantCraft

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
client/: CMakeLists.txt
client/include/: client.hpp  local_server.hpp
client/include/bench/: bench_mode.hpp  bench_runner.hpp  debug_mode.hpp  dummy_client.hpp  gen_bench.hpp  load_test.hpp  metrics.hpp
client/include/client_core/: client.hpp  command_options.hpp  local_server.hpp
client/include/game_core/: camera.hpp  chunk_cache.hpp  input.hpp  player_state.hpp  remote_player.hpp
client/include/render/: chunk_mesh.hpp  chunk_mesher.hpp  chunk_renderer.hpp  frustum.hpp  renderer.hpp  shader.hpp  texture.hpp  window.hpp
client/src/: bench_main.cpp  client.cpp  main.cpp
client/src/bench/: bench_mode.cpp  bench_runner.cpp  debug_mode.cpp  dummy_client.cpp  gen_bench.cpp  load_test.cpp  metrics.cpp
client/src/client_core/: client.cpp  local_server.cpp
client/src/game_core/: camera.cpp  chunk_cache.cpp  input.cpp  player_state.cpp
client/src/render/: chunk_mesh.cpp  chunk_mesher.cpp  chunk_renderer.cpp  renderer.cpp  shader.cpp  texture.cpp  window.cpp
server/: CMakeLists.txt
server/include/: server.hpp
server/include/ecs/: components.hpp  registry.hpp
server/include/generation/: chunk_interest.hpp  chunk_registry.hpp  chunk_system.hpp  chunk_worker_pool.hpp  debug_stats.hpp  terrain_detail.hpp  terrain_gen.hpp
server/include/generation/device_shared/: biome_rules.hpp  column_field.hpp  host_device.hpp  noise.hpp  spline.hpp
server/include/generation/gpu_terrain/: gpu_launch.cuh  kernel.cuh
server/include/scheduler/: adaptive_sched.hpp  fifo_sched.hpp  frame_plan.hpp  metrics.hpp  priority_sched.hpp  scheduler.hpp  task.hpp  task_pool.hpp  tuning.hpp
server/include/server/: server.hpp
server/src/: main.cpp  server.cpp
server/src/generation/: chunk_interest.cpp  chunk_registry.cpp  chunk_system.cpp  chunk_worker_pool.cpp  terrain_detail.cpp  terrain_gen.cpp
server/src/generation/gpu_terrain/: gpu_launch.cu  kernel.cu
server/src/scheduler/: adaptive_sched.cpp  fifo_sched.cpp  priortity_sched.cpp  task_pool.cpp
shaders/: basic.frag  basic.vert  sky.frag  sky.vert
shared/: CMakeLists.txt
shared/include/: net_common.hpp  world_state.hpp
shared/include/device/: host_device.hpp
shared/include/math/: noise.hpp  spline.hpp
shared/include/net/: debug_packets.hpp  net_common.hpp
shared/include/settings/: settings.hpp
shared/include/world/: biome_rules.hpp  block.hpp  chunk.hpp  shared_player_state.hpp  terrain_params.hpp  world_state.hpp
shared/src/: chunk.cpp  net_common.cpp
